--- a/practica1_pkg/CMakeLists.txt
+++ b/practica1_pkg/CMakeLists.txt
@@ -38,6 +38,12 @@ publisher
 subscriber
 DESTINATION lib/${PROJECT_NAME})
 
+#----------- To launch files -------------
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
