rviz folder added to practica4_pkg and install destination too

--- a/src/practica4_pkg/CMakeLists.txt
+++ b/src/practica4_pkg/CMakeLists.txt
@@ -63,7 +63,7 @@ install(TARGETS
 map_pointcloud_node
 DESTINATION lib/${PROJECT_NAME})
 
-install(DIRECTORY launch 
+install(DIRECTORY launch rviz 
 DESTINATION share/${PROJECT_NAME})
 
 ament_package()
